# CairnOpen

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Jenkinsfile_installer  README.md  buildAll.bat  buildWheel.bat  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: documentation.yaml
_static/: custom.css
about_cairn/: contact_us.html  installation.html  what_is_cairn.html
api_guide/: commands.html
cairn_open_user_guide_lines/: How_to_take_into_account_the_environmental_impacts.html  What_are_the_input_and_output_files_of_a_Cairn_simulation.html  converter_advanced_use.html  how_to_define_an_energy_carrier.html  how_to_define_own_constraints.html  how_to_make_a_cairn_timeseries_file.html  how_to_make_a_performance_map_file.html  how_to_model_multiconverter.html  how_to_take_into_account_economic_aspects.html  rolling_horizon.html
cmake/: CairnVersion.cmake  FindCairn.cmake  FindCairnModels.cmake  FindMIPModeler.cmake  FindPegase.cmake  GenericAppEnv.in  ProjectVersion.cmake  __init__.py.in  api_options.cmake  cairn-config.cmake.in  default_options.cmake  full_options.cmake  pyproject.toml.in  setup.py.in
doc/dev/: CMakeLists.txt  Doxyfile.in  buildDoc.bat  conf.py  doxy_layout.xml.in  index.rst  readme.md
doc/dev/cmake/: FindSphinx.cmake
doc/dev/dev_user_guide/: Organization.csv  coding_rules.md  index.dox  organization.md  testing.md  understanding_cairn.md
doc/dev/doxygen/: doxygen.rst
doc/user/: buildDoc.bat  conf.py  config.ini  editConfig.py  glossary.rst  index.rst  requirements.txt
hmi_guide/: How_to_build_a_UDI.html  How_to_take_into_account_the_environmental_impacts.html  build_a_problem.html  display_map.html  display_results.html  display_sized_components.html  hide_multiobjective_components.html  link_components.html  postprocessing.html  shortcuts_and_options.html
models/: BusSubModel.html  ConverterSubModel.html  GridSubModel.html  OperationSubModel.html  SourceLoadSubModel.html  StorageSubModel.html  SubModel.html  TechnicalSubModel.html  common_toc.html  models.html
models/bus/: ManualObjective.html  NodeEquality.html  NodeLaw.html
models/common/: AgeingRunningHours.html
models/converter/: Compressor.html  Converter.html  Electrolyzer.html  MultiConverter.html
models/grid/: GridFree.html
models/operationconstraint/: MinStateTime.html  Ramp.html
models/sourceload/: SourceLoad.html
models/storage/: ResourceStock.html  StorageGen.html
resources/: DefUnits.json  DefUnits.xlsm
scripts/automaticReport/: HTMLGraphs.py  HTMLWriter.py  PerseeExtractResult.py  PerseePasteResults.py  Utilities.py  config_Colors_example.csv  config_Extract_example.xml  liten.sty  plotUtilities.py
scripts/doc/: codeAnalyzer.py  userDocGenRST.py
scripts/version_compatibility/: tableUpdatetov34.csv  updateJson.py  update_v4.2.0_v4.3.0.py  update_v4.4.0_v4.5.0.py  update_v4.5.0_v5.0.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  CairnCore_global.h  CairnDefine.in  CairnVersion.in  Cairn_Exception.cpp  Cairn_Exception.h  GlobalSettings.h
src/core/api/: BusAPI.cpp  CairnAPI.cpp  CairnAPI.h  CairnAPIUtils.cpp  CairnAPIUtils.h  CairnBind.cpp  EnergyVectorAPI.cpp  MilpComponentAPI.cpp  MilpPortAPI.cpp  ObjectAPI.cpp  OptimProblemAPI.cpp  SolutionAPI.cpp
src/core/base/: CairnCore.cpp  CairnCore.h  DynamicIndicator.cpp  DynamicIndicator.h  EnergyVector.cpp  EnergyVector.h  EnvImpact.cpp  EnvImpact.h  GUIData.cpp  GUIData.h  InputParam.cpp  InputParam.h  MILPComponent_global.h  MilpComponent.cpp  MilpComponent.h  MilpData.cpp  MilpData.h  MilpPort.cpp  MilpPort.h  ModelTS.cpp  ModelTS.h  ModelVar.cpp  ModelVar.h  OptimProblem.cpp  OptimProblem.h  StudyPathManager.cpp  StudyPathManager.h  TecEcoEnv.cpp  TecEcoEnv.h  ZEVariables.cpp  ZEVariables.h
src/core/base/timeSeries/: TimeSeriesManager.cpp  TimeSeriesManager.h  TimeSeriesReader.cpp  TimeSeriesReader.h  TimeSeriesReaderCSV.cpp  TimeSeriesReaderCSV.h  TimeSeriesReaderPegase.cpp  TimeSeriesReaderPegase.h
src/core/components/: BusCompo.cpp  BusCompo.h  GridCompo.cpp  GridCompo.h  MultiObjCompo.cpp  MultiObjCompo.h  SimulationControl.cpp  SimulationControl.h  Solver.cpp  Solver.h  SourceLoadCompo.cpp  SourceLoadCompo.h  TecEcoAnalysis.cpp  TecEcoAnalysis.h
src/core/parser/: JsonDescription.cpp  JsonDescription.h
src/core/submodels/: BusSubModel.cpp  BusSubModel.h  ConverterSubModel.cpp  ConverterSubModel.h  GridSubModel.cpp  GridSubModel.h  OperationSubModel.cpp  OperationSubModel.h  SourceLoadSubModel.cpp  SourceLoadSubModel.h  StorageSubModel.cpp  StorageSubModel.h  SubModel.cpp  SubModel.h  TechnicalSubModel.cpp  TechnicalSubModel.h
src/core/submodels/common/: AgeingRunningHours.cpp  AgeingRunningHours.h
src/core/unitsconverter/: COrHeader.h  OrDispUnitRef.cpp  OrDispUnitRef.h  OrDispUnits.cpp  OrDispUnits.h  OrJsonUtils.h  OrObject.cpp  OrObject.h  OrParam.cpp  OrParam.h  OrQuantities.cpp  OrQuantities.h  OrQuantity.cpp  OrQuantity.h  OrRoot.cpp  OrRoot.h  OrSysQuantity.cpp  OrSysQuantity.h  OrSystems.cpp  OrSystems.h  OrUnit.cpp  OrUnit.h  OrUnits.cpp  OrUnits.h  OrUnitsConverter.cpp  OrUnitsConverter.h
src/core/utils/: CairnUtils.cpp  CairnUtils.h  GridUtils.cpp  LICENSE_exprtk  LICENSE_json
src/modelInterface/: CMakeLists.txt  ModelFactory.cpp  ModelFactory.h  ModelInterface_global.h
src/models/: CMakeLists.txt  globalModel.h
src/models/bus/: ManualObjective.cpp  ManualObjective.h  NodeEquality.cpp  NodeEquality.h  NodeLaw.cpp  NodeLaw.h
src/models/converter/: Compressor.cpp  Compressor.h  Converter.cpp  Converter.h  Electrolyzer.cpp  Electrolyzer.h  MultiConverter.cpp  MultiConverter.h
src/models/grid/: GridFree.cpp  GridFree.h
src/models/operationconstraint/: MinStateTime.cpp  MinStateTime.h  Ramp.cpp  Ramp.h
src/models/sourceload/: SourceLoad.cpp  SourceLoad.h
src/models/storage/: ResourceStock.cpp  ResourceStock.h  StorageGen.cpp  StorageGen.h
tests/: Run_all_NRT.bat  Run_all_TNR.bat  startCtest.bat
tests/apipython/: runJupyter.bat  test_api.ipynb  (+1 more)
(+258 files in other folders)
